# django-dynamic-logging

./: .travis.yml  CONTRIBUTING.rst  MANIFEST.in  README.rst  requirements.txt  setup.cfg  setup.py  test_requirements.txt  tox.ini
dynamic_logging/: __init__.py  admin.py  apps.py  handlers.py  models.py  propagator.py  scheduler.py  settings.py  signals.py  tests.py  widgets.py
dynamic_logging/migrations/: 0001_initial.py
dynamic_logging/static/admin/css/: dynamic_logging.css
dynamic_logging/static/admin/js/: jquerymy-1.2.8.min.js  logging_widget.js  minimal.js
dynamic_logging/templates/admin/dynamic_logging/: app_index.html
dynamic_logging/templates/admin/dynamic_logging/config/: change_form.html  change_list.html
dynamic_logging/templates/dynamic_logging/: display_config.html
dynamic_logging/templatetags/: dynamic_logging.py
testproject/: filter.py  settings.py  urls.py
testproject/templates/: home.html
testproject/testapp/: tests.py  urls.py  views.py
