[metadata]
description-file = README.rst
[bdist_wheel]
universal = 1

[flake8]
exclude=
    dynamic_logging/migrations/*.py


[coverage:run]
include =
    dynamic_logging
    testproject
omit =
    setup.py
    manage.py
    */migrations/*.py

[isort]
line_length=119
default_section=THIRDPARTY
import_heading_firstparty=
known_first_party=dynamic_logging,testproject,testproject.testapp